fix gap

--- a/src/app/office/projects/detail/info/info.component.scss
+++ b/src/app/office/projects/detail/info/info.component.scss
@@ -332,6 +332,11 @@
 }
 
 .news {
+  &__form {
+    display: block;
+    margin-top: 20px;
+  }
+
   &__item {
     display: block;
     margin-top: 20px;
